Added websocket-connection code but still using the Node server mock. Still working on transferring to the new format.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <script src="./node_modules/jquery/dist/jquery.min.js"></script>
         <script src="./node_modules/underscore/underscore-min.js"></script>
         <script src="./node_modules/backbone/backbone-min.js"></script>
+        <script src="./src/js/libs/stomp.js"></script>
 
         <!-- Main -->
         <script src="./dist/bundle.js"></script>
+        
+        <!-- Global stylesheets -->
+        <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css" />
     </body>
 </html>
