- Add services to subscribe to the different topics to get data instead of getting it from the node server - Add components to render the topology and status log messages

--- a/index.template.html
+++ b/index.template.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>GridAPPS-D</title>
-    </head>
-    <body>
-        <div id="example"></div>
 
-        <!-- Dependencies -->
-        <!-- How to specify these dependencies w/ require instead? -->
-        <script src="./src/js/libs/stomp.js"></script>
+<head>
+    <meta charset="UTF-8" />
+    <title>GridAPPS-D</title>
+</head>
 
-        
-        <!-- Global stylesheets -->
-        <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css" />
-    </body>
+<body>
+    <main></main>
+</body>
+
 </html>
