- Add a button to show a hint next to realtime checkbox - Add a tooltip component

--- a/index.template.html
+++ b/index.template.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>GridAPPS-D</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
